# project-anu

./: .dockerignore  .env  .env.example  README.md  components.json  docker-compose.yml  dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
src-tauri/: 2  Cargo.toml  app.db  diesel.toml  project_anu.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-03-28-015945_create_templates/: down.sql  up.sql
src-tauri/src/: comands.rs  file_system.rs  lib.rs  main.rs  schema.rs  state.rs  utils.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/commands/: config_user_command.rs  file_system_command.rs  mod.rs  templates_comands.rs  update_command.rs  utils_command.rs
src-tauri/src/adapters/dto/: file_system_dto.rs  mod.rs  note_dto.rs  template_dto.rs
src-tauri/src/commands/: config_user.rs  file_system.rs  mod.rs  update.rs  utils.rs
src-tauri/src/common/: mod.rs  response.rs  utils.rs
src-tauri/src/core/entities/: mod.rs  (+2 more)
src-tauri/src/db/: conection.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/logging/: setup.rs
src-tauri/src/models/: mod.rs  templates.rs
src-tauri/src/repository/: mod.rs  proyects.rs  templates.rs
src-tauri/src/service/: config_user.rs  file_system.rs  mod.rs  updater.rs  utils.rs
src-tauri/src/shared/: constants.rs  mod.rs  response.rs  utils.rs
src-tauri/src/tests/: api_response.rs
src-tauri/src/use_cases/: config_user.rs  file_system.rs  mod.rs  updater.rs
(+87 files in other folders)
